add agent cron
